Github.io 내용 수정

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 											<h4>[KDT]클라우드활용 자바개발자 양성과정</h4>
 											<p>
 												<br>
-												총 119일 / 946시간<br>
+												총 118일 / 900시간<br>
 												작성중입니다.작성중입니다.작성중입니다.<br>
 												작성중입니다.작성중입니다.작성중입니다.
 												<br>
@@ -245,7 +245,11 @@
 												(주)엠씨지컨설팅
 												<span> 2021-10-25 - 2023-03-17</span>
 											</h3>
-											<h4>솔루션 운영본부 빅데이터 팀 사원</h4>
+											<h4>
+												솔루션 운영 본부<br>
+												빅데이터 팀<br>
+												사원
+											</h4>
 											<p>
 												<br>
 												근무형태 : 정규직<br>
@@ -391,28 +395,34 @@
 												ETC_CSS수정예정
 												<!-- <span> 2020-11 - 2021-09</span> -->
 											</h3>
-											<h4>세무정보처리(TAT)2급(국가공인)</h4>
+											<h4>세무정보처리(TAT)2급</h4>
 											<p>
+												국가 공인 자격<br>
 												최종 합격(21.06)
 											</p>
-											<h4>회계정보처리(FAT)1급(국가공인)</h4>
+											<h4>회계정보처리(FAT)1급</h4>
 											<p>
+												국가 공인 자격<br>
 												최종 합격(21.06)
 											</p>
-											<h4>ERP 인사 정보관리사 2급(국가공인)</h4>
+											<h4>ERP 인사 정보관리사 2급</h4>
 											<p>
+												국가 공인 자격<br>
 												최종 합격(21.06)
 											</p>
-											<h4>전산세무 2급(국가공인)</h4>
+											<h4>전산세무 2급</h4>
 											<p>
+												국가 공인 자격<br>
 												최종 합격(21.04)
 											</p>
-											<h4>전산회계 1급(국가공인)</h4>
+											<h4>전산회계 1급</h4>
 											<p>
+												국가 공인 자격<br>
 												최종 합격(20.12)
 											</p>
-											<h4>전산회계 2급(국가공인)</h4>
+											<h4>전산회계 2급</h4>
 											<p>
+												국가 공인 자격<br>
 												최종 합격(19.03)
 											</p>
 											<h4>2종 보통 운전면허</h4>
