소개 내용 수정

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 									<p><strong>적극적인 협업과 노력으로 성취를 추구하는 지원자 이강산 입니다.<br>
 									<br>어제보다 발전하는 자신을 보며 자기성장을 원동력 삼아 살아갑니다.<br>
 									<br>칭찬과 질책을 겸허히 수용하고, 이를 통해 깨달음을 얻습니다.<br>
-									<br>어깨너머로 배우고 등뒤로 끌어주며 함께 성장하는 사람이 되고 싶습니다.<br>
+									<br>어깨너머로 배우고 등뒤에서 밀어주며 함께 교류하고 성장하는 사람이 되고 싶습니다.<br>
 									
 									 </strong></p><br>
 									<p>Name <strong>이강산</strong></p>
