--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<aside id="colorlib-aside" role="complementary" class="border js-fullheight">
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/profile.jpg); size: 50px"></div>
-				<h1 id="colorlib-logo"><a href="index.html">이강산</a></h1>
+				<h1 id="colorlib-logo"><a href="index.html">Gangsan Lee</a></h1>
 				<span class="position"><a href="#">Junior Developer</a> in Korea</span>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
@@ -78,7 +78,7 @@
 									<h2 class="colorlib-heading">INTRODUCE</h2>
 									
 									<p><strong>적극적인 협업과 노력으로 성취를 추구하는 지원자 이강산 입니다.<br>
-									<br>어제보다 발전하는 자신을 보며 자기성장을 원동력 삼아 살아갑니다.<br>
+									<br>어제보다 발전하는 자신을 보며 성장을 원동력 삼아 살아갑니다.<br>
 									<br>칭찬과 질책을 겸허히 수용하고, 이를 통해 깨달음을 얻습니다.<br>
 									<br>어깨너머로 배우고 등뒤를 밀어주며 함께 교류하고 성장하는 사람이 되고 싶습니다.<br>
 									
@@ -122,46 +122,52 @@
 									      				<br>2023.04.05 ~ 2023.09.26<br>
 									      				총 118일 / 900시간<br><br>
 									      				<li>
-									      					<strong>1개월차</strong> : HTML과 Java 기본 문법을 기반으로 프로그램의 기본 자료구조를 학습했습니다. 
+									      					<strong>1개월차</strong> : Eclipse IDE와 MariaDB(HeidiSQL)의 사용법을 익혔습니다.<br>
+									      					Dynamic Web Project로 JSP를 생성, HTML과 Java의 기본 문법을 학습했습니다.<br>
+									      					SQL문법 중 기초적인 DML을 배웠고, 이를 활용해 Java Calendar API를 사용, 다이어리를 제작했습니다.
 									      					<br>
 									      					<br>
 									      				<li>
-									      					<strong>2~3개월차</strong> : HTML / CSS / JavaScript를 공부했고, 간단한 BootStrap 사용방법을 익히고 실습하였습니다. 
-									      					<br>
-									      					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									      					RDBMS의 종류를 배운 후, OracleDB를 기반으로 게시판과 MariaDB를 기반으로 가계부를 제작했습니다.
+									      					<strong>2개월차</strong> : SQL의 전반적인 내용과 Java, RDBMS 그리고 CSS와 BootStrap의 적용 방법에 대해 학습했습니다.<br>
+									      					OracleDB로 계층형 쿼리, groub by 함수 등에 대해 학습하였고 Github 사용법에 대해 알게 되었습니다.<br>
+									      					OracleDB와 MariaDB로 JDBC API를 연습하고 MariaDB를 연동하여 사용자 게시판을 제작했습니다.
 									      					<br>
 								      					</li><br>
 									      				<li>
-									      					<strong>4개월차</strong> : 앞서 배운 기술들과 협업에 필요한 Github을 활용하여,
-									      					<br>
-									      					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									      					훈련생들과의 효율적인 업무분배를 통하여 세미 팀프로젝트(쇼핑몰 종류의 PC-Mall)을 만들었습니다.
+									      					<strong>3개월차</strong> : 앞서 배운 기술들과 JavaScript(JQuery) 그리고 Github을 활용하여,<br>
+       														Model1 방식의 세미 팀프로젝트(쇼핑몰 웹사이트)를 제작했습니다.<br>
+       														계획표를 제작, 담당업무 분배와 일정 관리 등을 통해 협업 방법에 대해 알게 되었습니다.
 									      				</li><br> 
 									      				<li> 
-									      					<strong>5~6개월차</strong> : 지금껏 배운 내용을 응용해 SpringBoot Framework와 비동기통신을 활용하여,
-									      					<br>
-									      					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-									      					 서버와의 통신하는 프로젝트를 진행하는 중에 있습니다.
+									      					<strong>4개월차</strong> : Java의 기초 이론을 책으로 복습하였습니다.<br>
+									      					MVC 패턴과 Model2 방식, 그리고 Spring Boot Framework의 사용법을 익혔습니다.<br>
+       														Eclipse에서 Model2 방식으로 가계부를 제작하고, 이를 Spring Boot를 통해 재구현하여<br>
+       														Eclipse와 SpringBoot의 차이점에 대해 알게 되었습니다.
+									      				</li><br> 
+									      				<li> 
+									      					<strong>5~6개월차</strong> : 현재까지 배운 내용을 활용하여 진행하는 기업연계 파이널 프로젝트로,<br>
+      														클라우드 활용 업무지원 시스템 구축 프로젝트를 진행 중에 있습니다.<br>
+      														요구사항 수집부터, DB설계, 기능 구현 등을 진행 예정입니다. 
 									      				</li><br> 
 									      				<li> 
 									      					<strong>이수하며</strong>
 									      					<br>
-									      					 기초를 잡으며 실습을 통해 배웠던 내용을 직접 구현해보았습니다.<br>
-									      					 한 프로젝트가 끝나면 곧이어 다음 프로젝트를 시작하며 코딩에 대한 감을 잃지 않기 위해 노력하였으며,<br>
-									      					 잠을 줄여가며 기능을 구현하고, 한 문제에 3~4시간을 투자하여 해결하며 즐거움을 느꼈습니다.<br>
-									      					 실습 중심의 강의에 이론을 병행하며 지식을 넓혔고, 자격증 공부도 꾸준히 하여 <br>
+									      					 개발에 있어 기초지식을 학습하며 실습을 통해 배웠던 내용을 직접 구현해보았습니다.<br>
+									      					 한 프로젝트 종료 후, 곧이어 다음 프로젝트를 시작하며 코딩에 대한 열정을 잃지 않기 위해 노력하였으며,<br>
+									      					 이러한 과정에서 문제 발생 시 빠른 해결을 위해 노력하는 것에 즐거움을 느꼈습니다.<br>
+									      					 또한, 협업의 중요성과 팀원들과의 의사소통 방법 등에 대해 배우고 발전하였습니다.<br>
+									      					 실습 중심의 강의에 이론을 병행하며 지식을 넓혔고, 자격증 역시 준비하여 <br>
 									      					 정보처리기사 필기와 SQLD에 합격하였습니다.
 									      				</li><br> 
 									      			</ul>
-									      			&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: bold">사용기술</span>
+									      			&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: bold">교육 이수 기술</span>
 									      			<ul>
-														<li>Front-End: Html, CSS, JAVA Script, Jquery, JSP</li>
-														<li>Back-End: JAVA</li>
-														<li>Data Base: Maria DB, Oracle DB</li>
+														<li>Back-End: Java, Spring, JSP/JSTL</li>
 														<li>FrameWork : Spring Boot, MyBatis</li>
+														<li>Data Base: Maria DB, MySql, Oracle DB</li>
+														<li>Front-End: Html5, CSS, JavaScript, Jquery, BootStrap5</li>
 														<li>IDE : Spring Tool Suite 4, Eclipse</li>
-														<li>Server: Tomcat</li>
+														<li>Server: Apache Tomcat</li>
 														<li>형상 관리 서버: Github</li>
 													</ul>
 									      	</div>
@@ -283,9 +289,9 @@
 				                  <h2>FINAL PROJECT(팀 프로젝트)<span> 2023.07.24 ~ 진행중 [개발인원: 5명]</span></h2>
 				                  <h2 style="color:#46AAFF;"><strong>업무지원 시스템 구축(SPRING BOOT) </strong></h2>
 				                   <p style="text-align:center;">
-				                  	<button type="button" class="btn btn-link" onclick="window.open('http://3.38.82.69/58platform/login')">
-				                  		<img src="images/final2.png" style="width: 80%; height: 80%;">
-				                  	</button>
+				                  	<button type="button" class="btn btn-link" onclick="window.open('')">
+				                  		<img src="images/final-main.jpg" style="width: 80%; height: 80%;">
+				                  	</button><br>
 				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
 				                  </p>
 				                  <p>
@@ -296,25 +302,14 @@
 				                  </p>
 				                  <P>
 				                 	<br>
-				                 	※프로젝트 진행하며 수정예정<br>
-				                 	&nbsp;SpringFramework 기반의 통합플랫폼 구현을 목적으로 Multi-Platform을 만들어보고자 합니다. <br>
-				                 	통합플랫폼은 쇼핑몰,예약업체,광고업체을 통합의 관리하며 통합된 요구사항 분석하여 도출합니다. <br>
-				                 	처음 팀간의 협업을 통해 제작한 요구사항 정의서와 UI/UX라 새로웠습니다. <br>
-				                 	&nbsp;주로 당담하게된 부분은 통합플랫폼의 기업과 공지사항이며, 진행상황은 현재 작업중에 있습니다. <br>
-				                 	기업은 현재 작업 중으로 사이트별 기업관리와 정보조회, 기업별 매출, 판매상품 등을 마무리 중 입니다. <br>
-				                 	공지사항에는 CRUD 외 비동기 통신을 이용하여 RestAPI를 활용하여 중복검사를 추가했습니다. <br>
- 									JS와 Ajax를 많이 활용하고, 모르는 부분은 검색을 통해 공부하며 구현해보고자 합니다. <br>
- 									특히 채팅 기능은 경험하지 못할것 같아 아쉬웠지만, 팀원의 지식을 공유 받아 공부하고자 합니다. <br>
-									&nbsp;3팀(예약/쇼핑/플랫폼)이 하나의 데이터베이스로 작업을 진행하다보니 코드 작성하기까지 <br>
-									사전작업이 생각보다 많은 시간이 소요되었습니다. <br>
-									초반 투자된 시간만큼 효율성 높은 결과물로 배포될 것을 기대하며 진행하고 있습니다! <br>
+				                 	※프로젝트 진행예정<br>
 				                  	<br>
 				                  </P>
 					              <p>
 				                  	<strong>Development Environment</strong> <br>
 				                  	OS : Window10 <br>
 				                  	Language / Library : <br>
-				                  	Tool : SpringToolSuite4(4.17.1)
+				                  	Tool : Spring Tool Suite4, HeidiSql<br>
 				                  	Database : MariaDB(10.5.19) <br>
 				                  	Server : Apache Tomcat(9.0.75)
 				                  </p>
@@ -326,12 +321,11 @@
 				                  	Language : Java(11.0.17)<br>
 				                  </p>
 				                  <p>
-					              	<button type="button" class="btn btn-link" onclick="window.open('images/final-erd.png')">ERD</button>
-				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/goodee-project/58platform')">Github</button>
-					              	<button type="button" class="btn btn-link" onclick="window.open('images/final-platform 요구사항정의서.jpeg')">요구사항 정의서</button>
-					              	<button type="button" class="btn btn-link" onclick="window.open('images/final-ppt.pdf')">PPT</button>
-					              	<button type="button" class="btn btn-primary" onclick="window.open('https://youtu.be/awMVrSRZpjI')">동영상</button>
-					              	<button type="button" class="btn btn-primary" onclick="window.open('http://3.38.82.69/58platform/login')">프로젝트</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('images/')">ERD</button>
+				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/sanlee27')">Github</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('images/')">요구사항 정의서</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('images/')">PPT</button>
+					              	<button type="button" class="btn btn-primary" onclick="window.open('http://'')">AWS</button>
 					          </p>
 				               </div>
 				            </div>
@@ -420,8 +414,8 @@
 				                  	Server : Apache Tomcat(9.0.75) 
 				                  </p>
 				                  <p>
-				                  	<button type="button" class="btn btn-primary" onclick="window.open('images/semi-ERD.png')">ERD</button>
-				                  	<button type="button" class="btn btn-primary" onclick="window.open('https://github.com/Sanlee27/FlowerShop_Lilac')">Github</button>
+				                  	<button type="button" class="btn btn-link" onclick="window.open('images/semi-ERD.png')">ERD</button>
+				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/Sanlee27/FlowerShop_Lilac')">Github</button>
 				                  	<!-- <button type="button" class="btn btn-primary" onclick="window.open('https://youtu.be/gdyIIDtADU0')">동영상</button> -->
 					              	<button type="button" class="btn btn-primary" onclick="window.open('http://43.202.78.7/FlowerShop_Lilac/home.jsp')">AWS</button>
 				                  </p>
@@ -497,8 +491,8 @@
 				                  	Server : Apache Tomcat(9.0.75)
 				                  </p>
 				                  <p>
-				                  	<button type="button" class="btn btn-primary" onclick="window.open('images/cashbook-erd.png')">ERD</button>
-				                  	<button type="button" class="btn btn-primary" onclick="window.open('https://github.com/Sanlee27/cashbook')">Github</button>
+				                  	<button type="button" class="btn btn-link" onclick="window.open('images/cashbook-ERD.png')">ERD</button>
+				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/Sanlee27/cashbook')">Github</button>
 				                  	<button type="button" class="btn btn-primary" onclick="window.open('http://43.202.78.7/cash/cashbook')">AWS</button>
 				                  </p>
 				                  <br>
@@ -561,8 +555,8 @@
 				                  	Server : Apache Tomcat(9.0.75)
 				                  </p>
 				                  <p>
-				                  	<button type="button" class="btn btn-primary" onclick="window.open('images/cashbook-erd.png')">ERD</button>
-				                  	<button type="button" class="btn btn-primary" onclick="window.open('https://github.com/Sanlee27/userboard')">Github</button>
+				                  	<button type="button" class="btn btn-link" onclick="window.open('images/userboard-ERD.png')">ERD</button>
+				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/Sanlee27/userboard')">Github</button>
 				                  	<button type="button" class="btn btn-primary" onclick="window.open('http://43.202.78.7/userboard/home.jsp')">AWS</button>
 				                  </p>
 				               </div>
@@ -646,6 +640,7 @@
 									<img src="images/spring.svg" style="height: 18px;"> Spring<br>
 									<img src="images/jsp.png" style="height: 20px; width: 18px"> JSP/JSTL<br>
 									<img src="images/mybatis.png" style="height: 23px; width: 17px"> MyBatis<br>
+									&nbsp;<br>
 									</p>
 								</div>
 							</div>
@@ -656,9 +651,10 @@
 								<div class="desc">
 									<h3>DATABASE</h3>
 									<p class="text-left">
-									<img src="images/mysql.png" style="height: 20px;"> MySql<br>
 									<img src="images/mariadb.png" style="height: 20px;"> MariaDB<br>
+									<img src="images/mysql.png" style="height: 20px;"> MySql<br>
 									<img src="images/oracledb.png" style="height: 20px;"> OracleDB<br>
+									&nbsp;<br>
 									&nbsp;<br></p>
 								</div>
 							</div>
@@ -672,6 +668,7 @@
 									<img src="images/css.png" style="height: 23px;"> CSS<br>
 									<img src="images/js.png" style="height: 23px;"> JS/Jquery<br> 
 									<img src="images/boot.png" style="height: 18px;"> BootStrap</p>
+									&nbsp;<br>
 								</div>
 							</div>
 						</div>
@@ -682,9 +679,10 @@
 									<h3>TOOL</h3>
 									<p class="text-left">
 									<img src="images/eclipse.jpg" style="height: 23px;"> Eclipse<br>
+									<img src="images/sts4.jpg" style="height: 23px;"> STS4<br>
+									<img src="images/heidisqll.png" style="height: 23px;"> HeideSQL<br>
 									<img src="images/github.png" style="height: 23px;"> Github <br>
 									<img src="images/aws.jpg" style="height: 21px; width: 21px"> AWS<br>
-									&nbsp;</p>
 								</div>
 							</div>
 						</div>
