--- a/index.html
+++ b/index.html
@@ -358,12 +358,6 @@
 				                  	</button><br>
 				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
 				                  </p>
-				                  <p>
-				                  	<strong>Keyword</strong><br>
-				                  	# Spring Boot #  # Github # AWS # Maven # MyBatis # Ajax<br>
-				                  	# 전자결재 # 일정관리 # 문서관리 # 공용품관리 # 전자게시판 # 회원관리
-				                  	<br> 
-				                  </p>
 				                  <P>
 				                 	<br>
 				                 	※프로젝트 진행예정<br>
@@ -437,22 +431,19 @@
 									<br>
 									<strong>1) 사용자</strong><br>
 									회원가입, 고객정보 RUD<br>
-									- 비동기 웹 요청으로 테이블을 조회하여 아이디 중복 검사와 비밀번호 확인, 변경 기능을 구현했습니다.<br>
-									- 주문 시 포인트가 적립되고, 사용/취소 또는 주문 취소시 포인트가 증감하도록 구현했습니다.<br>
-									- JQuery를 활용하여 가입, 수정 문항에 조건을 부여하였습니다.<br>
-									- 다음 주소 API를 활용하여 사용자가 주소를 검색할 수 있게 하였습니다.<br>
+									- 비동기 웹 요청으로 테이블을 조회하여 아이디 중복 검사와 비밀번호 확인, 변경 구현<br>
+									- 주문 시 포인트 적립, 사용/취소 또는 주문 취소시 포인트 증감 내역 출력 구현<br>
+									- JQuery를 활용하여 가입, 수정 문항에 조건 부여<br>
+									- 다음 주소 API 활용<br>
 									<br>
-									주문내역 전체/상세 조회<br>
-									- JQuery를 활용, 주문 상태에 따라 주문 취소 가능 여부를 구분하였습니다.<br>
+									-  JQuery 활용, 주문 상태에 따른 주문 취소 가능여부 구분<br>
 									<br>
-									상품 리스트 조회<br>
-									- 정렬 / 검색 시에 해당 값을 받아 SELECT쿼리의 WHERE절에 입력되도록 하였습니다.<br>
-									- JQuery를 활용하여 정렬 / 검색과 초기화를 구현하였습니다.<br>
+									- 상품 리스트 정렬 / 검색 값이 있는 경우, 조건문을 통해 SELECT쿼리의 WHERE절 입력 처리<br>
+									- JQuery를 통한 정렬 / 검색과 초기화 구현<br>
 									<br>
 									<strong>2) 관리자</strong><br>
 									할인상품 CRUD<br>
-									- 다수의 상품 할인 변경 시, 변경 값을 배열타입으로 변수에 저장,<br>
-									&nbsp;&nbsp;&nbsp;반복문을 사용하여 각각 변수에 저장, 값을 변경 처리했습니다.
+									- 다수의 상품 할인 변경 시, 변경 값을 배열로 변수에 저장, 반복문을 사용하여 분기 및 변경 처리
 				                  </p>
 				                  <p>
 				                  	<strong>성장점</strong>
@@ -513,16 +504,14 @@
 									메모에 해시태그(#)를 붙혀 작성하면, 메인 상단에 해당 키워드가 표시되도록 했습니다.<br> 
 									<br>
 									달력<br>
-									- Java의 Calendar API를 사용해 년/월/일을 구해 달력을 구현했습니다.<br>
+									- JAVA Calendar API를 활용, 달력을 활용한 일자 별 가계 내역 출력<br>
 									<br>
 									CRUD<br>
-									- View에서 EL을 사용하여 코드를 구현하였습니다.<br>
-									- c:set을 사용, 변수명에 값을 할당하여 출력되도록 하는 등,
-									 JSTL core의 태그를 사용해 구현했습니다.<br>
+									- View에서 EL을 사용하여 코드 구현<br>
+									- JSTL core의 태그 사용, 변수명에 값을 할당하여 View에 출력<br>
 									 <br>
-									현재/일일/누적 접속자<br>
-									- Listner를 이용해 현재 이용중인 고객의 수를 확인할 수 있습니다.<br>
-									- Session이 소멸될 경우 console에 표시, 접속자 수를 줄도록 하였습니다.<br>
+									- Listener를 활용하여 현재 / 일일 / 누적 접속자 수를 확인 가능<br>
+									- Session 소멸 시 console에 표시, 현재 접속자 수 감소 처리<br>
 				                  </p>
 				                  <p>
 				                  	<strong>성장점</strong>
@@ -579,13 +568,13 @@
 									BootStrap5를 활용해 간단한 CSS 작업을 했습니다.<br>
 				                 	<br>
 				                 	CRUD<br>
-				                 	- 지역명을 추가, 수정, 삭제 가능하며 작성한 게시물에 대해 수정과 삭제를 할 수 있으며,<br> 
-				                 	&nbsp;&nbsp;&nbsp;댓글을 작성할 수 있습니다.<br>
-				                 	- 사용자는 회원가입부터 수정, 탈퇴 등의 사용자 정보를 관리 할 수 있습니다.<br>
+				                 	- 카테고리(지역) 목록 및 각 지역에 해당하는 게시물 CRUD 가능<br> 
+				                 	&nbsp;&nbsp;&nbsp;로그인 여부 확인 후, 사용자만 댓글 입력 허용<br>
+				                 	- 사용자는 회원가입부터 수정, 탈퇴 등의 사용자 정보를 관리 가능<br>
 				                 	<br>
 				                 	ETC<br>
-				                 	- 페이지 처리를 구현했습니다.<br> 
-				                 	- jsp:include를 활용하여 메인메뉴바와 저작권표기를 구현했습니다.<br>
+				                 	- 쿼리를 통해 전체 row 개수를 구한 뒤, 각각 또는 10단위 페이지 선택 가능 처리<br> 
+				                 	- jsp:include를 활용하여 메인메뉴바와 저작권표기<br>
 				                  </p>
 				                  <p>
 				                  	<strong>성장점</strong>
