--- a/index.html
+++ b/index.html
@@ -434,6 +434,7 @@
 									- 비동기 웹 요청으로 테이블을 조회하여 아이디 중복 검사와 비밀번호 확인, 변경 구현<br>
 									- 주문 시 포인트 적립, 사용/취소 또는 주문 취소시 포인트 증감 내역 출력 구현<br>
 									- JQuery를 활용하여 가입, 수정 문항에 조건 부여<br>
+									- 비동기 처리 방식을 활용한 카카오 로그인 구현<br>
 									- 다음 주소 API 활용<br>
 									<br>
 									-  JQuery 활용, 주문 상태에 따른 주문 취소 가능여부 구분<br>
