--- a/index.html
+++ b/index.html
@@ -310,7 +310,8 @@
 												- 기업/개인 등의 고객이 프로그램을 통해 제출한 세금계산서 등의 데이터 관리<br>
 												- 고객사에서 요청 받은 내부 데이터 추출 및 정리 후 송부
 												<li>사내 프로그램 개발 보조</li>
-												- 주채무계열 등의 기업집단과 직/간접적인 관계를 형성하는 업체의 투자, 거래 내역 등을 확인 가능한 서비스
+												- 주채무계열 등의 기업집단과 직/간접적인 관계를 형성하는 업체의 투자, 거래 내역 등을<br>
+												&nbsp;&nbsp;확인 가능한 서비스
 												<li>고객사 관리 및 분기/년 별 정산</li>
 												고객사<br>
 												&nbsp;&nbsp;&nbsp;- 우리은행<br>
@@ -356,11 +357,11 @@
 				                  	<button type="button" class="btn btn-link" onclick="window.open('')">
 				                  		<img src="images/final-main.jpg" style="width: 80%; height: 80%;">
 				                  	</button><br>
-				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
+				                  	<!-- <span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span> -->
 				                  </p>
 				                  <P>
 				                 	<br>
-				                 	※프로젝트 진행예정<br>
+				                 	※프로젝트 진행 중입니다.<br>
 				                  	<br>
 				                  </P>
 					             <p>
@@ -380,11 +381,11 @@
 				                  </p>
 				                  <p>
 				                  <p>
-				                 	<button type="button" class="btn btn-link" onclick="window.open('images/')">ERD</button>
+				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">ERD</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/sanlee27')">Github</button>
-					              	<button type="button" class="btn btn-link" onclick="window.open('images/')">요구사항 정의서</button>
-					              	<button type="button" class="btn btn-link" onclick="window.open('images/')">PPT</button>
-					              	<button type="button" class="btn btn-primary" onclick="window.open('http://'')">AWS</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">요구사항 정의서</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">PPT</button>
+					              	<button type="button" class="btn btn-primary" onclick="window.open('images/final-main.jpg')">AWS</button>
 				                  </p>
 				               </div>
 				            </div>
@@ -416,7 +417,7 @@
 									View와 Controller를 모두 구현하는 JSP와 Model을 구현하는 JavaBeans(Dao)를 분리하는<br>
 									Model1 방식을 이용해 만든 세미 팀 프로젝트로, 꽃 판매몰을 직접 만들었습니다.<br><br>
 									고객과 관리자로 구분되어 DB에 저장되며, 계정, 상품, 고객 등을 포함해 16개 테이블이 사용됩니다.<br>
-									Session을 통해 로그인과 비회원 장바구니 기능이 실행되고 비회원의 경우 상품 구매 등의 <br>제한되는 기능이 있습니다.<br>
+									Session을 통한 로그인과 비회원 장바구니 기능, 비회원의 경우 상품 구매 등의 <br>제한되는 기능이 있습니다.<br>
 									고객과 관리자의 아이디는 한 테이블에서 관리되어 중복될 수 없고, 회원탈퇴한 아이디로는 <br>재가입이 불가능합니다.<br><br>
 									
 									<strong>담당 역할</strong> :  팀장<br>
