AWS 개인도메인 적용 / 화면설계서 추가

--- a/index.html
+++ b/index.html
@@ -381,10 +381,10 @@
 				                  </p>
 				                  <p>
 				                  <p>
+					              	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">요구사항 정의서</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('https://ovenapp.io/view/oqKJSqI19XkX0VwwbP4qET124lPxMFNC/Qr1cg')">화면 설계서</button>
 				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">ERD</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/sanlee27')">Github</button>
-					              	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">요구사항 정의서</button>
-					              	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">PPT</button>
 					              	<button type="button" class="btn btn-primary" onclick="window.open('images/final-main.jpg')">AWS</button>
 				                  </p>
 				               </div>
@@ -400,7 +400,7 @@
 				               	<h2>SEMI PROJECT(팀 프로젝트) <span> 2023.06.01 ~ 2023.06.27 [개발인원: 4명]</span></h2>
 				               	   <h2 style="color:#46AAFF;"><strong>쇼핑몰 프로젝트(Eclipse)</strong></h2>	
 				                  <p style="text-align:center;">
-				                  	<button type="button" class="btn btn-link" onclick="window.open('http://43.202.78.7/FlowerShop_Lilac/home.jsp')">
+				                  	<button type="button" class="btn btn-link" onclick="window.open('http://www.sanlee.me/FlowerShop_Lilac/home.jsp')">
 				                 	 	<img src="images/semi-main.jpg" style="width: 80%; height: 80%">
 				                  	</button>
 				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
@@ -471,7 +471,7 @@
 				                  	<button type="button" class="btn btn-link" onclick="window.open('images/semi-dbLog.pdf')">DBLog</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('images/semi-schedule.pdf')">Schedule</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/Sanlee27/FlowerShop_Lilac')">Github</button>
-					              	<button type="button" class="btn btn-primary" onclick="window.open('http://43.202.78.7/FlowerShop_Lilac/home.jsp')">AWS</button>
+					              	<button type="button" class="btn btn-primary" onclick="window.open('http://www.sanlee.me/FlowerShop_Lilac/home.jsp')">AWS</button>
 				                  </p>
 				               </div>
 				            </div>
@@ -486,7 +486,7 @@
 				               	<h2>PORTFOLIO O2 <span> 2023.06.29 ~ 2023.07.12 </span></h2>  
 				               	  <h2 style="color:#46AAFF;"><strong>가계부 (Eclipse)</strong></h2>	
 				                  <p style="text-align:center;">
-				                  	<button type="button" class="btn btn-link" onclick="window.open('http://43.202.78.7/cash/login')">
+				                  	<button type="button" class="btn btn-link" onclick="window.open('http://www.sanlee.me/cash/login')">
 				                 	 	<img src="images/cashbook-main.jpg" style="width: 80%; height: 80%">
 				                  	</button>
 				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
@@ -538,7 +538,7 @@
 				                  <p>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('images/cashbook-ERD.png')">ERD</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/Sanlee27/cashbook')">Github</button>
-				                  	<button type="button" class="btn btn-primary" onclick="window.open('http://43.202.78.7/cash/cashbook')">AWS</button>
+				                  	<button type="button" class="btn btn-primary" onclick="window.open('http://www.sanlee.me/cash/cashbook')">AWS</button>
 				                  </p>
 				               </div>
 				            </div>
@@ -553,7 +553,7 @@
 				               	<h2>PORTFOLIO O1 <span> 2023.05.02 ~ 2023.05.20 </span></h2>
 				               	  <h2 style="color:#46AAFF;"><strong>카테고리 별 게시판 (Eclipse)</strong></h2>	
 				                  <p style="text-align:center;">
-				                  	<button type="button" class="btn btn-link" onclick="window.open('http://43.202.78.7/userboard/home.jsp')">
+				                  	<button type="button" class="btn btn-link" onclick="window.open('http://www.sanlee.me/userboard/home.jsp')">
 				                  		<img src="images/userboard-main.jpg" style="width: 80%; height: 80%">
 				                  	</button>
 				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
@@ -597,7 +597,7 @@
 				                  <p>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('images/userboard-ERD.png')">ERD</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/Sanlee27/userboard')">Github</button>
-				                  	<button type="button" class="btn btn-primary" onclick="window.open('http://43.202.78.7/userboard/home.jsp')">AWS</button>
+				                  	<button type="button" class="btn btn-primary" onclick="window.open('http://www.sanlee.me/userboard/home.jsp')">AWS</button>
 				                  </p>
 				               </div>
 				            </div>
