--- a/index.html
+++ b/index.html
@@ -241,14 +241,12 @@
 							      					Eclipse IDE와 MariaDB(HeidiSQL)의 사용법을 익혔습니다.<br>
 							      					Dynamic Web Project로 JSP를 생성, HTML과 Java의 기본 문법을 학습했습니다.<br>
 							      					SQL문법 중 기초적인 DML을 배웠고, 이를 활용해 Java Calendar API를 사용, 다이어리를 제작했습니다.
-							      					<br>
-							      					<br>
+							      				</li><br>
 							      				<li>
 							      					<strong>2개월차</strong><br>
 							      					SQL의 전반적인 내용과 Java, RDBMS 그리고 CSS와 BootStrap의 적용 방법에 대해 학습했습니다.<br>
 							      					OracleDB로 계층형 쿼리, groub by 함수 등에 대해 학습하였고 Github 사용법에 대해 알게 되었습니다.<br>
 							      					OracleDB와 MariaDB로 JDBC API를 연습하고 MariaDB를 연동하여 사용자 게시판을 제작했습니다.
-							      					<br>
 						      					</li><br>
 							      				<li>
 							      					<strong>3개월차</strong><br>
@@ -278,7 +276,7 @@
 							      					 또한, 협업의 중요성과 팀원들과의 의사소통 방법 등에 대해 배우고 발전하였습니다.<br><br>
 							      					 실습 중심의 강의에 이론을 병행하며 지식을 넓혔고, 자격증 역시 준비하여 <br>
 							      					 정보처리기사 필기와 SQLD에 합격하였습니다.
-							      				</li><br> 
+							      				</li><br>
 							      			</ul>
 							      			&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: bold">교육 이수 기술</span>
 							      			<ul>
@@ -384,7 +382,7 @@
 				                  <p>
 					              	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">요구사항 정의서</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://ovenapp.io/view/oqKJSqI19XkX0VwwbP4qET124lPxMFNC/Qr1cg')">화면 설계서</button>
-				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">ERD</button>
+				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.png')">ERD</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/sanlee27')">Github</button>
 					              	<button type="button" class="btn btn-primary" onclick="window.open('images/final-main.jpg')">AWS</button>
 				                  </p>
