--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 				                  	<button type="button" class="btn btn-link" onclick="window.open('http://www.sanlee.me/cash/login')">
 				                 	 	<img src="images/cashbook-main.jpg" style="width: 80%; height: 80%">
 				                  	</button>
-				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
+				                  	<span style="font-size: 10pxl; color:#F65151;">기능수정 중인 관계로 배포 중단하였습니다.</span>
 				                  </p>
 				                  <p>
 				                  	<strong>Test Account</strong><br>
