--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 				               </div>
 
 				               <div class="timeline-label">
-				                  <h2>FINAL PROJECT(팀 프로젝트)<span> 2023.07.24 ~ 진행중 [개발인원: 5명]</span></h2>
+				                  <h2>FINAL PROJECT(팀 프로젝트)<span> 2023.07.24 ~ 진행중 [개발인원: 4명]</span></h2>
 				                  <h2 style="color:#46AAFF;"><strong>업무지원 시스템 구축(SPRING BOOT) </strong></h2>
 				                  <p style="text-align:center;">
 				                  	<button type="button" class="btn btn-link" onclick="window.open('')">
@@ -359,8 +359,11 @@
 				                  	<!-- <span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span> -->
 				                  </p>
 				                  <P>
+				                 	전자 결재 시스템(그룹웨어)를 구현 중 입니다.<br>
+				                 	요구사항 정의서부터 화면 설계서, DB설계와 ERD 마지막으로 개발을 통해<br>
+				                 	개발 프로젝트의 전반적인 과정을 직접 경험 중에 있습니다.<br>
 				                 	<br>
-				                 	※프로젝트 진행 중입니다.<br>
+				                 	23년 08월 10일 현재 요구사항 정의서를 완성, 화면설계서 작성과 DB 설계 중에 있습니다.
 				                  	<br>
 				                  </P>
 					             <p>
@@ -380,7 +383,7 @@
 				                  </p>
 				                  <p>
 				                  <p>
-					              	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">요구사항 정의서</button>
+					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/18Mk3j_8P_gx4tj7zuXzIZpdzLfwF0GSDdXhSCngRVkI/edit?usp=sharing')">요구사항 정의서</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://ovenapp.io/view/oqKJSqI19XkX0VwwbP4qET124lPxMFNC/Qr1cg')">화면 설계서</button>
 				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.png')">ERD</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/sanlee27')">Github</button>
