세미프로젝트2 내용수정

--- a/index.html
+++ b/index.html
@@ -360,8 +360,8 @@
 				                  </p>
 				                  <P>
 				                 	전자 결재 시스템(그룹웨어)를 구현 중 입니다.<br>
-				                 	요구사항 정의서부터 화면 설계서, DB설계와 ERD 마지막으로 개발을 통해<br>
-				                 	개발 프로젝트의 전반적인 과정을 직접 경험 중에 있습니다.<br>
+				                 	요구사항 정의서부터 화면 설계서, DB설계와 ERD, 기능 구현을 통해<br>
+				                 	개발 프로젝트의 전반적인 과정을 경험 중에 있습니다.<br>
 				                 	<br>
 				                 	23년 08월 10일 현재 요구사항 정의서를 완성, 화면설계서 작성과 DB 설계 중에 있습니다.
 				                  	<br>
@@ -385,7 +385,7 @@
 				                  <p>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/18Mk3j_8P_gx4tj7zuXzIZpdzLfwF0GSDdXhSCngRVkI/edit?usp=sharing')">요구사항 정의서</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://ovenapp.io/view/oqKJSqI19XkX0VwwbP4qET124lPxMFNC/Qr1cg')">화면 설계서</button>
-				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.png')">ERD</button>
+				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">ERD</button>
 				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/sanlee27')">Github</button>
 					              	<button type="button" class="btn btn-primary" onclick="window.open('images/final-main.jpg')">AWS</button>
 				                  </p>
@@ -491,7 +491,7 @@
 				                  	<button type="button" class="btn btn-link" onclick="window.open('http://www.sanlee.me/cash/login')">
 				                 	 	<img src="images/cashbook-main.jpg" style="width: 80%; height: 80%">
 				                  	</button>
-				                  	<span style="font-size: 10pxl; color:#F65151;">기능수정 중인 관계로 배포 중단하였습니다.</span>
+				                  	<span style="font-size: 10pxl; color:#F65151;">↑ 클릭하시면 이동합니다.</span>
 				                  </p>
 				                  <p>
 				                  	<strong>Test Account</strong><br>
@@ -502,7 +502,7 @@
 									Model2 방식을 이용해 만든 개인 프로젝트로, JAVA Calendar API를 사용해 만든 가계부입니다.<br>
 									<br>
 									사용자와 가계내역, 해시태그와 접속자 수 총 4개의 테이블이 사용되었습니다.<br>
-									로그인은 Session을 통해 구현했으며, 최초 로그인 시 Session을 생성하고,<br>
+									로그인은 Session을 통해 구현, 최초 로그인 시 Session을 생성하고<br>
 									해당 날짜의 접속자(counter) 테이블에 추가되어 일일/누적 접속자 수에 합산되도록 하였습니다.<br>
 									가계 내역 작성 시, 수입과 지출 내역을 구분 선택하고<br>
 									메모에 해시태그(#)를 붙혀 작성하면, 메인 상단에 해당 키워드가 표시되도록 했습니다.<br> 
