--- a/index.html
+++ b/index.html
@@ -231,6 +231,7 @@
 								        </h4>
 								    </div>
 								    <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
+								    <!-- 내용이 너무 길어지면 대학/고교 accordion 펼칠시 프로젝트로 내려가는 이슈 -->
 								         <div class="panel-body">	
 							      			&nbsp;&nbsp;&nbsp;&nbsp;<span style="font-weight: bold">[KDT] 클라우드활용 자바개발자 양성과정</span>
 							      			<ul> 
@@ -644,7 +645,7 @@
 												- 주채무계열 등의 기업집단과 직/간접적인 관계를 형성하는 업체의 투자, 거래 내역 등을<br>
 												&nbsp;&nbsp;확인 가능한 서비스
 												<li>고객사 관리 및 분기/년 별 정산</li>
-												고객사<br>
+												주요 고객사<br>
 												&nbsp;&nbsp;&nbsp;- 우리은행<br>
 												&nbsp;&nbsp;&nbsp;- 산업은행<br>
 												&nbsp;&nbsp;&nbsp;- 현대커머셜 외 다수<br>
