--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 					             <p>
 				                  	<strong>Development Environment</strong> <br>
 				                  	OS : Window10 <br>
-				                  	Language / Library : <br>
+				                  	Language / Library : Java(JavaSE-17) <br>
 				                  	Tool : Spring Tool Suite4, HeidiSql<br>
 				                  	Database : MariaDB(10.5.19) <br>
 				                  	Server : Apache Tomcat(9.0.75)
@@ -378,8 +378,8 @@
 				                  <p>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://docs.google.com/spreadsheets/d/14pBo1mVq1itf9k0ICLOCON31LCX-n6IWnCRpT895wnY/edit?usp=sharing')">요구사항 정의서</button>
 					              	<button type="button" class="btn btn-link" onclick="window.open('https://ovenapp.io/view/oqKJSqI19XkX0VwwbP4qET124lPxMFNC/Qr1cg')">화면 설계서</button>
-				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-main.jpg')">ERD</button>
-				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/sanlee27')">Github</button>
+				                 	<button type="button" class="btn btn-link" onclick="window.open('images/final-ERD.png')">ERD</button>
+				                  	<button type="button" class="btn btn-link" onclick="window.open('https://github.com/yeye-team/yeyebooks-groupware')">Github</button>
 					              	<button type="button" class="btn btn-primary" onclick="window.open('images/final-main.jpg')">AWS</button>
 				                  </p>
 				               </div>
