파이널 프로젝트 내용 수정

--- a/index.html
+++ b/index.html
@@ -364,7 +364,11 @@
 				                 	요구사항 정의서부터 화면 설계서, DB설계와 ERD, 기능 구현을 통해<br>
 				                 	개발 프로젝트의 전반적인 과정을 경험 중에 있습니다.<br>
 				                 	<br>
-				                 	23년 08월 10일 현재 요구사항 정의서를 완성, 화면설계서 작성과 DB 설계 중에 있습니다.
+				                 	23년 08월 16일 현재 기능 분배를 완료하였습니다.<br>
+				                 	<strong>담당 기능</strong> :<br>
+				                 	사용자 : (공지/전체/부서) 게시판 별 전체 기능 / (회사/부서/개인) 일정 전체 기능
+				                  	<br>
+				                 	관리자 : 게시판 관리 / 회사 일정 관리
 				                  	<br>
 				                  </P>
 					             <p>
